# wlrobs

./: .build.yml  .gitignore  .hgignore  .hgtags  README.md  meson.build
Debug/: makefile  objects.mk
Debug/proto/: subdir.mk
Debug/src/: subdir.mk
Release/: makefile  objects.mk  sources.mk
Release/proto/: subdir.mk
Release/src/: subdir.mk
inc/: dmabuf_source.h  scpy_source.h  wlr-screencopy-unstable-v1-client-protocol.h  wlr_source.h
proto/: wlr-screencopy-unstable-v1-protocol.c
src/: dmabuf_source.c  main.c  scpy_source.c  wlr_source.c
